// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LanguageSelector should select DQL if language is kuery 1`] = `
<Provider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  services={
    Object {
      "data": Object {
        "query": Object {
          "queryString": Object {
            "getDatasetService": [Function],
            "getLanguageService": [Function],
            "getQuery": [MockFunction] {
              "calls": Array [
                Array [],
                Array [],
                Array [],
                Array [],
                Array [],
                Array [],
                Array [],
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Object {
                    "dataset": undefined,
                    "language": "lucene",
                    "query": "",
                  },
                },
                Object {
                  "type": "return",
                  "value": Object {
                    "dataset": undefined,
                    "language": "lucene",
                    "query": "",
                  },
                },
                Object {
                  "type": "return",
                  "value": Object {
                    "dataset": undefined,
                    "language": "lucene",
                    "query": "",
                  },
                },
                Object {
                  "type": "return",
                  "value": Object {
                    "dataset": undefined,
                    "language": "lucene",
                    "query": "",
                  },
                },
                Object {
                  "type": "return",
                  "value": Object {
                    "dataset": undefined,
                    "language": "kuery",
                    "query": "",
                  },
                },
                Object {
                  "type": "return",
                  "value": Object {
                    "dataset": undefined,
                    "language": "kuery",
                    "query": "",
                  },
                },
                Object {
                  "type": "return",
                  "value": Object {
                    "dataset": undefined,
                    "language": "kuery",
                    "query": "",
                  },
                },
                Object {
                  "type": "return",
                  "value": Object {
                    "dataset": undefined,
                    "language": "kuery",
                    "query": "",
                  },
                },
              ],
            },
            "getUpdates$": [MockFunction],
          },
        },
      },
      "docLinks": Object {
        "DOC_LINK_VERSION": "mocked-test-branch",
        "OPENSEARCH_WEBSITE_URL": "https://opensearch.org/",
        "links": Object {
          "noDocumentation": Object {
            "addData": "https://opensearch.org/docs/mocked-test-branch/getting-started/ingest-data/",
            "apmServer": "https://opensearch.org/docs/mocked-test-branch",
            "auditbeat": "https://opensearch.org/docs/mocked-test-branch/tools/",
            "clusterAPI": Object {
              "clusterPending": "https://opensearch.org/docs/mocked-test-branch/api-reference/cluster-api/cluster-pending-tasks/",
              "clusterRoute": "https://opensearch.org/docs/mocked-test-branch/api-reference/cluster-api/cluster-reroute/",
              "clusterState": "https://opensearch.org/docs/mocked-test-branch/api-reference/cluster-api/cluster-state/",
              "clusterStats": "https://opensearch.org/docs/mocked-test-branch/api-reference/cluster-api/cluster-stats/",
            },
            "documentAPI": Object {
              "delete_by_query": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/delete-by-query/",
              "multiTermVector": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/mtermvectors/",
              "termVector": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/termvector/",
              "update_by_query_rethrottle": "https://opensearch.org/docs/mocked-test-branch/api-reference/tasks/rethrottle/",
            },
            "filebeat": "https://opensearch.org/docs/mocked-test-branch/tools/",
            "filed_caps": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/field-caps/",
            "functionbeat": "https://opensearch.org/docs/mocked-test-branch/tools/",
            "heartbeat": "https://opensearch.org/docs/mocked-test-branch/tools/",
            "indexAPI": Object {
              "indexAnalyze": "https://opensearch.org/docs/mocked-test-branch/api-reference/analyze-apis/",
              "indexClearCache": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/clear-index-cache/",
              "indexClone": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/clone/",
              "indexFlush": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/flush/",
              "indexForceMerge": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/force-merge/",
              "indexGetFieldMapping": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/get-field-mapping/",
              "indexGetMapping": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/get-mapping/",
              "indexOpenClose": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/open-index/",
              "indexPutMapping": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/put-mapping/",
              "indexRecovery": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/recover/",
              "indexRefresh": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/refresh/",
              "indexRollover": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/rollover/",
              "indexSearchValidate": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/validate/",
              "indexSegment": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/segment/",
              "indexSetting": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/get-settings/",
              "indexShardStore": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/shard-stores/",
              "indexShrink": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/shrink-index/",
              "indexSplit": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/split/",
              "indexStats": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/stats/",
              "indexSynced": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/flush/",
              "indexUpdateSetting": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/update-settings/",
              "indexUpgrade": "https://opensearch.org/docs/mocked-test-branch/migrate-or-upgrade/",
            },
            "indexPatterns": Object {
              "introduction": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/index-patterns/",
              "loadingData": "https://opensearch.org/docs/mocked-test-branch/getting-started/ingest-data/",
            },
            "ingest": Object {
              "appendProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/append/",
              "bytesProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/bytes/",
              "convertProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/convert/",
              "csvProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/csv/",
              "dataIndexNamProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/date-index-name/",
              "dataProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/date/",
              "deletePipeline": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/delete-ingest/",
              "dissectProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/dissect/",
              "dotExpandProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/dot-expander/",
              "dropProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/drop/",
              "failProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/fail/",
              "foreachProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/foreach/",
              "geoIPProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/ip2geo/",
              "getPipeline": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/get-ingest/",
              "grokProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/grok/",
              "gusbProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/gsub/",
              "htmlstripProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/html-strip/",
              "inferenceProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/ml-inference/",
              "ingestCircleProcessor": "https://opensearch.org/docs/mocked-test-branch",
              "joinProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/join/",
              "jsonProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/json/",
              "kvProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/kv/",
              "lowecaseProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/lowercase/",
              "pipelineProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/pipeline/",
              "putPipeline": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/create-ingest/",
              "removeProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/remove/",
              "renameProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/rename/",
              "scriptProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/script/",
              "securityUserProcessor": "https://opensearch.org/docs/mocked-test-branch",
              "setProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/set/",
              "simulatePipeline": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/simulate-ingest/",
              "sortProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/sort/",
              "splitProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/split/",
              "trimProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/trim/",
              "uppercaseProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/uppercase/",
              "urldecodeProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/urldecode/",
              "userAgentProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/user-agent/",
            },
            "logstash": "https://opensearch.org/docs/mocked-test-branch/tools/logstash/index/",
            "lucene": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/query-string/",
            },
            "management": Object {
              "dashboardSettings": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/advanced-settings/",
              "opensearchDashboardsGeneralSettings": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/advanced-settings/",
              "opensearchDashboardsSearchSettings": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/advanced-settings/",
            },
            "mappingTypes": "https://opensearch.org/docs/mocked-test-branch/mappings/",
            "metricbeat": "https://opensearch.org/docs/mocked-test-branch/tools/",
            "moduleScripting": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/index/",
            "nodes": Object {
              "hotThreads": "https://opensearch.org/docs/mocked-test-branch/api-reference/nodes-apis/nodes-hot-threads/",
              "info": "https://opensearch.org/docs/mocked-test-branch/api-reference/nodes-apis/nodes-info/",
              "nodeStats": "https://opensearch.org/docs/mocked-test-branch/api-reference/nodes-apis/nodes-stats/",
              "reloadSecuritySetting": "https://opensearch.org/docs/mocked-test-branch/api-reference/nodes-apis/nodes-reload-secure/",
              "usage": "https://opensearch.org/docs/mocked-test-branch/api-reference/nodes-apis/nodes-usage/",
            },
            "painless_execute": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/exec-script/",
            "ppl": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/sql-and-ppl/ppl/commands/syntax/",
            },
            "reIndex": Object {
              "rethrottle": "https://opensearch.org/docs/mocked-test-branch/api-reference/tasks/rethrottle/",
            },
            "savedObject": Object {
              "manageSavedObject": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/saved-objects/",
            },
            "scriptedFields": Object {
              "luceneExpressions": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/index/",
              "painless": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/index/",
              "painlessApi": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/exec-script/",
              "painlessSyntax": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/index/",
              "scriptAggs": "https://opensearch.org/docs/mocked-test-branch/aggregations/",
              "scriptFields": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/index/",
            },
            "scroll": Object {
              "clear_scroll": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/scroll/#step-3-close-the-scroll-context",
            },
            "search": Object {
              "search": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search/",
              "searchFieldCap": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/field-caps/",
              "searchRankEval": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/rank-eval/",
              "searchShards": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-shards/",
            },
            "siem": "https://opensearch.org/docs/mocked-test-branch/security-analytics/",
            "snapshot": Object {
              "cleanup": "https://opensearch.org/docs/mocked-test-branch/api-reference/snapshots/cleanup-snapshot-repository/",
              "deleteRepository": "https://opensearch.org/docs/mocked-test-branch/api-reference/snapshots/delete-snapshot-repository/",
              "deleteSnapshot": "https://opensearch.org/docs/mocked-test-branch/api-reference/snapshots/delete-snapshot/",
              "veirfyRepository": "https://opensearch.org/docs/mocked-test-branch/api-reference/snapshots/verify-snapshot-repository/",
            },
            "sql": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/sql-and-ppl/sql/basic/",
            },
            "sqlPplIndex": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/sql-and-ppl/",
              "ppl": "https://opensearch.org/docs/mocked-test-branch/sql-and-ppl/ppl/index/",
              "sql": "https://opensearch.org/docs/mocked-test-branch/sql-and-ppl/sql/index/",
            },
            "sqlPplLimitation": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/sql-and-ppl/limitation/",
            },
            "tutorial": Object {
              "loadDataTutorial": "https://opensearch.org/docs/mocked-test-branch/getting-started/quickstart/",
              "visualizeTutorial": "https://opensearch.org/docs/mocked-test-branch/dashboards/visualize/index/",
            },
            "vega": "https://opensearch.org/docs/mocked-test-branch/dashboards/visualize/visualize-app/vega/",
            "winlogbeat": "https://opensearch.org/docs/mocked-test-branch",
          },
          "opensearch": Object {
            "aggregations": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/aggregations/",
              "bucket": Object {
                "adjacency_matrix": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/adjacency-matrix/",
                "base": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/index/",
                "filter": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/filter/",
                "geo": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/geo-distance/",
                "global": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/global/",
                "histogram": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/histogram/",
                "missing": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/missing/",
                "nested": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/nested/",
                "range": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/range/",
                "significant_terms": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/significant-terms/",
                "smapler": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/sampler/",
                "terms": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/terms/",
              },
              "metric": Object {
                "base": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/index/",
                "cardinality": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/cardinality/",
                "geo_bound": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/geobounds/",
                "percentile": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/percentile/",
                "scripted_metric": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/scripted-metric/",
                "stats": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/stats/",
                "sum": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/sum/",
                "top_hits": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/top-hits/",
                "types": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/index/#types-of-metric-aggregations",
                "value_count": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/value-count/",
              },
              "pipeline": Object {
                "avg_bucket": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/avg-bucket/",
                "base": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/index/",
                "bucket_script": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/bucket-script/",
                "bucket_sort": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/bucket-sort/",
                "cumulative_sum": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/cumulative-sum/",
                "derivative": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/derivative/",
                "moving_avg": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/moving-avg/",
                "serial_diff": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/serial-diff/",
                "stats_bucket": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/stats-bucket/",
                "syntax": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/index/#buckets-path",
                "types": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/index/#pipeline-aggregation-types",
              },
            },
            "cluster": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/",
              "build_cluster": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#step-3-bind-a-cluster-to-specific-ip-addresses",
              "config_host": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#step-4-configure-discovery-hosts-and-initial-cluster-manager-nodes-for-a-cluster",
              "config_shard": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#advanced-step-6-configure-shard-allocation-awareness-or-forced-awareness",
              "naming": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#step-1-name-a-cluster",
              "set_attribute": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#step-2-set-node-attributes-for-each-node-in-a-cluster",
              "setup_hot_arch": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#advanced-step-7-set-up-a-hot-warm-architecture",
              "start": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#step-5-start-the-cluster",
            },
            "commonParameters": "https://opensearch.org/docs/mocked-test-branch/api-reference/common-parameters/",
            "configuration": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/configuring-opensearch/index/",
            "dataStreams": "https://opensearch.org/docs/mocked-test-branch/im-plugin/data-streams/",
            "dateMath": "https://opensearch.org/docs/mocked-test-branch/mappings/supported-field-types/date/#date-math",
            "indexAlias": Object {
              "add_remove_index": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-alias/#switching-an-alias-to-a-different-index",
              "alias_option": "https://opensearch.org/docs/mocked-test-branch/api-reference/alias/aliases-api/#request-body-fields",
              "base": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-alias/",
              "create_alias": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-alias/#creating-an-alias",
              "filtered_alias": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-alias/#filtering-an-alias",
              "manage_alias": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-alias/#inspecting-and-querying-aliases",
            },
            "indexData": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/im-plugin/",
              "delete_data": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/delete-document/",
              "naming": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/create-index/#index-naming-restrictions",
              "read_data": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/get-documents/",
              "update_data": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/update-document/",
            },
            "indexTemplates": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-templates/",
              "composable": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-templates/#creating-an-index-template",
              "options": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/create-index-template/#request-body-fields",
            },
            "installation": Object {
              "ansible": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/ansible/",
              "base": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/index/",
              "compatibility": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/index/",
              "docker": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/docker/",
              "dockerSecurity": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/docker/",
              "helm": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/helm/",
              "plugins": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/plugins/",
              "settings": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/index/",
              "tar": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/tar/",
            },
            "introduction": "https://opensearch.org/docs/mocked-test-branch/about/",
            "logs": Object {
              "application_log": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/configuring-opensearch/logs/#application-logs",
              "base": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/configuring-opensearch/logs/",
              "deprecation_log": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/configuring-opensearch/logs/#deprecation-logs",
              "slow_log": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/configuring-opensearch/logs/#search-request-slow-logs",
            },
            "openSearchForum": "https://forum.opensearch.org/t/feedback-experimental-feature-connect-to-external-data-sources/11144",
            "popularAPI": "https://opensearch.org/docs/mocked-test-branch/api-reference/popular-api/",
            "queryDSL": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/query-dsl/",
              "boolQuery": "https://opensearch.org/docs/mocked-test-branch/query-dsl/compound/bool/",
              "fullText": Object {
                "base": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/index/",
                "common_terms": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/index/",
                "match": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/match/",
                "match_phrase": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/match-phrase/",
                "multi_match": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/multi-match/",
                "options": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/index/",
                "query_string": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/query-string/",
              },
              "term": Object {
                "base": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/index/",
                "exists": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/exists/",
                "ids": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/ids/",
                "prefix": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/prefix/",
                "range": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/range/",
                "regex": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/regexp/",
                "terms": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/terms/",
                "wildcards": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/wildcard/",
              },
            },
            "reindexData": Object {
              "all": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#example-request",
              "base": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/",
              "combine": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#consolidating-time-based-indexes",
              "destination": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#the-dest-object",
              "remote": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#cross-cluster-reindexing",
              "source": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#the-source-object",
              "subset": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#filtering-documents-by-query",
              "transform": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#transforming-documents-using-ingest-pipelines",
              "unique": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#the-dest-object",
              "update": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/update-by-query/",
            },
            "restAPI": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/api-reference/",
              "indexAPI": Object {
                "base": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/index/",
                "close": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/close-index/",
                "create": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/create-index/",
                "delete": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/delete-index/",
                "exists": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/exists/",
                "get": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/get-index/",
              },
            },
            "searchExperience": Object {
              "autocomplete": "https://opensearch.org/docs/mocked-test-branch/search-plugins/searching-data/autocomplete/",
              "base": "https://opensearch.org/docs/mocked-test-branch/search-plugins/searching-data/index/",
              "highlight_match": "https://opensearch.org/docs/mocked-test-branch/search-plugins/searching-data/highlight/",
              "paginate": "https://opensearch.org/docs/mocked-test-branch/search-plugins/searching-data/paginate/",
              "scroll": "https://opensearch.org/docs/mocked-test-branch/search-plugins/searching-data/paginate/#scroll-search",
              "sort": "https://opensearch.org/docs/mocked-test-branch/search-plugins/searching-data/sort/",
            },
            "searchTemplate": Object {
              "advanced_operation": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-template/index/#advanced-parameter-conversion-with-search-templates",
              "base": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-template/index/",
              "create": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-template/index/#create-search-templates",
              "execute": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-template/index/#save-and-execute-search-templates",
              "manage": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-template/index/#manage-search-templates",
              "multiple_search": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-template/index/#multiple-search-templates",
            },
            "snapshotRestore": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/availability-and-recovery/snapshots/snapshot-restore/",
              "register": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/availability-and-recovery/snapshots/snapshot-restore/#register-repository",
              "restore_snapshot": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/availability-and-recovery/snapshots/snapshot-restore/#restore-snapshots",
              "security_plugin": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/availability-and-recovery/snapshots/snapshot-restore/#security-considerations",
              "take_snapshot": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/availability-and-recovery/snapshots/snapshot-restore/#take-snapshots",
            },
            "supportedUnits": "https://opensearch.org/docs/mocked-test-branch/api-reference/units/",
          },
          "opensearchDashboards": Object {
            "browser": "https://opensearch.org/docs/mocked-test-branch/dashboards/getting-started/index/",
            "dashboards": Object {
              "createDashboards": "https://opensearch.org/docs/mocked-test-branch/dashboards/dashboard/index/",
              "quickStart": "https://opensearch.org/docs/mocked-test-branch/dashboards/getting-started/index/",
            },
            "dataSource": Object {
              "guide": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/multi-data-sources/",
              "s3DataSource": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/S3-data-source/",
            },
            "devTools": "https://opensearch.org/docs/mocked-test-branch/dashboards/dev-tools/index/",
            "dql": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/dashboards/dql",
              "boolean_query": "https://opensearch.org/docs/mocked-test-branch/dashboards/dql/#boolean-operators",
              "date_query": "https://opensearch.org/docs/mocked-test-branch/dashboards/dql/#ranges",
              "nested_query": "https://opensearch.org/docs/mocked-test-branch/dashboards/dql/#nested-fields",
              "terms_query": "https://opensearch.org/docs/mocked-test-branch/dashboards/dql/#search-for-terms",
            },
            "ganttCharts": "https://opensearch.org/docs/mocked-test-branch/dashboards/gantt",
            "installation": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/index/",
              "docker": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/docker/",
              "helm": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/helm/",
              "plugins": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/plugins/",
              "tar": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/tar/",
              "tls": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/tls/",
            },
            "introduction": "https://opensearch.org/docs/mocked-test-branch/dashboards/",
            "management": Object {
              "advancedSettings": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/advanced-settings/",
            },
            "mapTiles": "https://opensearch.org/docs/mocked-test-branch/dashboards/visualize/visualize-app/maptiles/",
            "notebooks": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/observing-your-data/notebooks/",
              "create_report": "https://opensearch.org/docs/mocked-test-branch/observing-your-data/notebooks/#create-a-report",
              "notebook_tutorial": "https://opensearch.org/docs/mocked-test-branch/observing-your-data/notebooks/#get-started-with-notebooks",
              "paragraph_tutorial": "https://opensearch.org/docs/mocked-test-branch/observing-your-data/notebooks/#paragraph-actions",
              "sample_notebook": "https://opensearch.org/docs/mocked-test-branch/observing-your-data/notebooks/#sample-notebooks",
            },
            "reporting": "https://opensearch.org/docs/mocked-test-branch/reporting/report-dashboard-index/",
            "visualize": Object {
              "guide": "https://opensearch.org/docs/mocked-test-branch/dashboards/visualize/visualize-app/index/",
            },
            "workspace": Object {
              "collaborators": "https://opensearch.org/docs/mocked-test-branch/dashboards/workspace/workspace-acl/#defining-workspace-collaborators",
              "privacy": "https://opensearch.org/docs/mocked-test-branch/dashboards/workspace/workspace-acl/#configuring-workspace-privacy",
            },
          },
        },
      },
      "http": Object {
        "addLoadingCountSource": [MockFunction],
        "anonymousPaths": Object {
          "isAnonymous": [MockFunction],
          "register": [MockFunction],
        },
        "basePath": BasePath {
          "basePath": "",
          "clientBasePath": "",
          "get": [Function],
          "getBasePath": [Function],
          "prepend": [Function],
          "remove": [Function],
          "serverBasePath": "",
        },
        "delete": [MockFunction],
        "fetch": [MockFunction],
        "get": [MockFunction],
        "getLoadingCount$": [MockFunction],
        "head": [MockFunction],
        "intercept": [MockFunction],
        "options": [MockFunction],
        "patch": [MockFunction],
        "post": [MockFunction],
        "put": [MockFunction],
      },
      "uiSettings": Object {
        "get": [MockFunction],
        "get$": [MockFunction],
        "getAll": [MockFunction],
        "getAllUserProvidedWithScope": [MockFunction],
        "getDefault": [MockFunction],
        "getSaved$": [MockFunction],
        "getUpdate$": [MockFunction],
        "getUpdateErrors$": [MockFunction],
        "getUserProvidedWithScope": [MockFunction],
        "isCustom": [MockFunction],
        "isDeclared": [MockFunction],
        "isDefault": [MockFunction],
        "isOverridden": [MockFunction],
        "overrideLocalDefault": [MockFunction],
        "remove": [MockFunction],
        "set": [MockFunction],
      },
    }
  }
>
  <QueryLanguageSelector
    onSelectLanguage={[MockFunction]}
  >
    <EuiPopover
      anchorPosition="downLeft"
      button={
        <EuiSmallButtonEmpty
          className="languageSelector__button"
          data-test-subj="queryEditorLanguageSelector"
          iconSide="right"
          iconType="arrowDown"
          onClick={[Function]}
        >
          DQL
        </EuiSmallButtonEmpty>
      }
      className="languageSelector"
      closePopover={[Function]}
      display="inlineBlock"
      hasArrow={true}
      isOpen={false}
      ownFocus={true}
      panelPaddingSize="none"
    >
      <div
        className="euiPopover euiPopover--anchorDownLeft languageSelector"
      >
        <div
          className="euiPopover__anchor"
        >
          <EuiSmallButtonEmpty
            className="languageSelector__button"
            data-test-subj="queryEditorLanguageSelector"
            iconSide="right"
            iconType="arrowDown"
            onClick={[Function]}
          >
            <EuiButtonEmpty
              className="languageSelector__button"
              data-test-subj="queryEditorLanguageSelector"
              iconSide="right"
              iconType="arrowDown"
              onClick={[Function]}
              size="s"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small languageSelector__button"
                data-test-subj="queryEditorLanguageSelector"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <EuiButtonContent
                  className="euiButtonEmpty__content"
                  iconGap="m"
                  iconSide="right"
                  iconSize="m"
                  iconType="arrowDown"
                  textProps={
                    Object {
                      "className": "euiButtonEmpty__text",
                    }
                  }
                >
                  <span
                    className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                  >
                    <EuiIcon
                      className="euiButtonContent__icon"
                      color="inherit"
                      size="m"
                      type="arrowDown"
                    >
                      <span
                        className="euiButtonContent__icon"
                        color="inherit"
                        data-euiicon-type="arrowDown"
                        size="m"
                      />
                    </EuiIcon>
                    <span
                      className="euiButtonEmpty__text"
                    >
                      DQL
                    </span>
                  </span>
                </EuiButtonContent>
              </button>
            </EuiButtonEmpty>
          </EuiSmallButtonEmpty>
        </div>
      </div>
    </EuiPopover>
  </QueryLanguageSelector>
</Provider>
`;

exports[`LanguageSelector should select lucene if language is lucene 1`] = `
<Provider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {
        "date": Object {
          "full": Object {
            "day": "numeric",
            "month": "long",
            "weekday": "long",
            "year": "numeric",
          },
          "long": Object {
            "day": "numeric",
            "month": "long",
            "year": "numeric",
          },
          "medium": Object {
            "day": "numeric",
            "month": "short",
            "year": "numeric",
          },
          "short": Object {
            "day": "numeric",
            "month": "numeric",
            "year": "2-digit",
          },
        },
        "number": Object {
          "currency": Object {
            "style": "currency",
          },
          "percent": Object {
            "style": "percent",
          },
        },
        "relative": Object {
          "days": Object {
            "units": "day",
          },
          "hours": Object {
            "units": "hour",
          },
          "minutes": Object {
            "units": "minute",
          },
          "months": Object {
            "units": "month",
          },
          "seconds": Object {
            "units": "second",
          },
          "years": Object {
            "units": "year",
          },
        },
        "time": Object {
          "full": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "long": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
            "timeZoneName": "short",
          },
          "medium": Object {
            "hour": "numeric",
            "minute": "numeric",
            "second": "numeric",
          },
          "short": Object {
            "hour": "numeric",
            "minute": "numeric",
          },
        },
      },
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": Object {},
      "now": [Function],
      "onError": [Function],
      "textComponent": Symbol(react.fragment),
      "timeZone": null,
    }
  }
  services={
    Object {
      "data": Object {
        "query": Object {
          "queryString": Object {
            "getDatasetService": [Function],
            "getLanguageService": [Function],
            "getQuery": [MockFunction] {
              "calls": Array [
                Array [],
                Array [],
                Array [],
                Array [],
              ],
              "results": Array [
                Object {
                  "type": "return",
                  "value": Object {
                    "dataset": undefined,
                    "language": "lucene",
                    "query": "",
                  },
                },
                Object {
                  "type": "return",
                  "value": Object {
                    "dataset": undefined,
                    "language": "lucene",
                    "query": "",
                  },
                },
                Object {
                  "type": "return",
                  "value": Object {
                    "dataset": undefined,
                    "language": "lucene",
                    "query": "",
                  },
                },
                Object {
                  "type": "return",
                  "value": Object {
                    "dataset": undefined,
                    "language": "lucene",
                    "query": "",
                  },
                },
              ],
            },
            "getUpdates$": [MockFunction],
          },
        },
      },
      "docLinks": Object {
        "DOC_LINK_VERSION": "mocked-test-branch",
        "OPENSEARCH_WEBSITE_URL": "https://opensearch.org/",
        "links": Object {
          "noDocumentation": Object {
            "addData": "https://opensearch.org/docs/mocked-test-branch/getting-started/ingest-data/",
            "apmServer": "https://opensearch.org/docs/mocked-test-branch",
            "auditbeat": "https://opensearch.org/docs/mocked-test-branch/tools/",
            "clusterAPI": Object {
              "clusterPending": "https://opensearch.org/docs/mocked-test-branch/api-reference/cluster-api/cluster-pending-tasks/",
              "clusterRoute": "https://opensearch.org/docs/mocked-test-branch/api-reference/cluster-api/cluster-reroute/",
              "clusterState": "https://opensearch.org/docs/mocked-test-branch/api-reference/cluster-api/cluster-state/",
              "clusterStats": "https://opensearch.org/docs/mocked-test-branch/api-reference/cluster-api/cluster-stats/",
            },
            "documentAPI": Object {
              "delete_by_query": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/delete-by-query/",
              "multiTermVector": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/mtermvectors/",
              "termVector": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/termvector/",
              "update_by_query_rethrottle": "https://opensearch.org/docs/mocked-test-branch/api-reference/tasks/rethrottle/",
            },
            "filebeat": "https://opensearch.org/docs/mocked-test-branch/tools/",
            "filed_caps": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/field-caps/",
            "functionbeat": "https://opensearch.org/docs/mocked-test-branch/tools/",
            "heartbeat": "https://opensearch.org/docs/mocked-test-branch/tools/",
            "indexAPI": Object {
              "indexAnalyze": "https://opensearch.org/docs/mocked-test-branch/api-reference/analyze-apis/",
              "indexClearCache": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/clear-index-cache/",
              "indexClone": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/clone/",
              "indexFlush": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/flush/",
              "indexForceMerge": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/force-merge/",
              "indexGetFieldMapping": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/get-field-mapping/",
              "indexGetMapping": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/get-mapping/",
              "indexOpenClose": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/open-index/",
              "indexPutMapping": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/put-mapping/",
              "indexRecovery": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/recover/",
              "indexRefresh": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/refresh/",
              "indexRollover": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/rollover/",
              "indexSearchValidate": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/validate/",
              "indexSegment": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/segment/",
              "indexSetting": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/get-settings/",
              "indexShardStore": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/shard-stores/",
              "indexShrink": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/shrink-index/",
              "indexSplit": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/split/",
              "indexStats": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/stats/",
              "indexSynced": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/flush/",
              "indexUpdateSetting": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/update-settings/",
              "indexUpgrade": "https://opensearch.org/docs/mocked-test-branch/migrate-or-upgrade/",
            },
            "indexPatterns": Object {
              "introduction": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/index-patterns/",
              "loadingData": "https://opensearch.org/docs/mocked-test-branch/getting-started/ingest-data/",
            },
            "ingest": Object {
              "appendProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/append/",
              "bytesProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/bytes/",
              "convertProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/convert/",
              "csvProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/csv/",
              "dataIndexNamProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/date-index-name/",
              "dataProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/date/",
              "deletePipeline": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/delete-ingest/",
              "dissectProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/dissect/",
              "dotExpandProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/dot-expander/",
              "dropProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/drop/",
              "failProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/fail/",
              "foreachProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/foreach/",
              "geoIPProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/ip2geo/",
              "getPipeline": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/get-ingest/",
              "grokProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/grok/",
              "gusbProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/gsub/",
              "htmlstripProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/html-strip/",
              "inferenceProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/ml-inference/",
              "ingestCircleProcessor": "https://opensearch.org/docs/mocked-test-branch",
              "joinProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/join/",
              "jsonProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/json/",
              "kvProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/kv/",
              "lowecaseProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/lowercase/",
              "pipelineProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/pipeline/",
              "putPipeline": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/create-ingest/",
              "removeProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/remove/",
              "renameProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/rename/",
              "scriptProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/script/",
              "securityUserProcessor": "https://opensearch.org/docs/mocked-test-branch",
              "setProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/set/",
              "simulatePipeline": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/simulate-ingest/",
              "sortProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/sort/",
              "splitProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/split/",
              "trimProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/trim/",
              "uppercaseProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/uppercase/",
              "urldecodeProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/urldecode/",
              "userAgentProcessor": "https://opensearch.org/docs/mocked-test-branch/ingest-pipelines/processors/user-agent/",
            },
            "logstash": "https://opensearch.org/docs/mocked-test-branch/tools/logstash/index/",
            "lucene": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/query-string/",
            },
            "management": Object {
              "dashboardSettings": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/advanced-settings/",
              "opensearchDashboardsGeneralSettings": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/advanced-settings/",
              "opensearchDashboardsSearchSettings": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/advanced-settings/",
            },
            "mappingTypes": "https://opensearch.org/docs/mocked-test-branch/mappings/",
            "metricbeat": "https://opensearch.org/docs/mocked-test-branch/tools/",
            "moduleScripting": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/index/",
            "nodes": Object {
              "hotThreads": "https://opensearch.org/docs/mocked-test-branch/api-reference/nodes-apis/nodes-hot-threads/",
              "info": "https://opensearch.org/docs/mocked-test-branch/api-reference/nodes-apis/nodes-info/",
              "nodeStats": "https://opensearch.org/docs/mocked-test-branch/api-reference/nodes-apis/nodes-stats/",
              "reloadSecuritySetting": "https://opensearch.org/docs/mocked-test-branch/api-reference/nodes-apis/nodes-reload-secure/",
              "usage": "https://opensearch.org/docs/mocked-test-branch/api-reference/nodes-apis/nodes-usage/",
            },
            "painless_execute": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/exec-script/",
            "ppl": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/sql-and-ppl/ppl/commands/syntax/",
            },
            "reIndex": Object {
              "rethrottle": "https://opensearch.org/docs/mocked-test-branch/api-reference/tasks/rethrottle/",
            },
            "savedObject": Object {
              "manageSavedObject": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/saved-objects/",
            },
            "scriptedFields": Object {
              "luceneExpressions": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/index/",
              "painless": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/index/",
              "painlessApi": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/exec-script/",
              "painlessSyntax": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/index/",
              "scriptAggs": "https://opensearch.org/docs/mocked-test-branch/aggregations/",
              "scriptFields": "https://opensearch.org/docs/mocked-test-branch/api-reference/script-apis/index/",
            },
            "scroll": Object {
              "clear_scroll": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/scroll/#step-3-close-the-scroll-context",
            },
            "search": Object {
              "search": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search/",
              "searchFieldCap": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/field-caps/",
              "searchRankEval": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/rank-eval/",
              "searchShards": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-shards/",
            },
            "siem": "https://opensearch.org/docs/mocked-test-branch/security-analytics/",
            "snapshot": Object {
              "cleanup": "https://opensearch.org/docs/mocked-test-branch/api-reference/snapshots/cleanup-snapshot-repository/",
              "deleteRepository": "https://opensearch.org/docs/mocked-test-branch/api-reference/snapshots/delete-snapshot-repository/",
              "deleteSnapshot": "https://opensearch.org/docs/mocked-test-branch/api-reference/snapshots/delete-snapshot/",
              "veirfyRepository": "https://opensearch.org/docs/mocked-test-branch/api-reference/snapshots/verify-snapshot-repository/",
            },
            "sql": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/sql-and-ppl/sql/basic/",
            },
            "sqlPplIndex": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/sql-and-ppl/",
              "ppl": "https://opensearch.org/docs/mocked-test-branch/sql-and-ppl/ppl/index/",
              "sql": "https://opensearch.org/docs/mocked-test-branch/sql-and-ppl/sql/index/",
            },
            "sqlPplLimitation": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/sql-and-ppl/limitation/",
            },
            "tutorial": Object {
              "loadDataTutorial": "https://opensearch.org/docs/mocked-test-branch/getting-started/quickstart/",
              "visualizeTutorial": "https://opensearch.org/docs/mocked-test-branch/dashboards/visualize/index/",
            },
            "vega": "https://opensearch.org/docs/mocked-test-branch/dashboards/visualize/visualize-app/vega/",
            "winlogbeat": "https://opensearch.org/docs/mocked-test-branch",
          },
          "opensearch": Object {
            "aggregations": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/aggregations/",
              "bucket": Object {
                "adjacency_matrix": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/adjacency-matrix/",
                "base": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/index/",
                "filter": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/filter/",
                "geo": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/geo-distance/",
                "global": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/global/",
                "histogram": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/histogram/",
                "missing": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/missing/",
                "nested": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/nested/",
                "range": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/range/",
                "significant_terms": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/significant-terms/",
                "smapler": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/sampler/",
                "terms": "https://opensearch.org/docs/mocked-test-branch/aggregations/bucket/terms/",
              },
              "metric": Object {
                "base": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/index/",
                "cardinality": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/cardinality/",
                "geo_bound": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/geobounds/",
                "percentile": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/percentile/",
                "scripted_metric": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/scripted-metric/",
                "stats": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/stats/",
                "sum": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/sum/",
                "top_hits": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/top-hits/",
                "types": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/index/#types-of-metric-aggregations",
                "value_count": "https://opensearch.org/docs/mocked-test-branch/aggregations/metric/value-count/",
              },
              "pipeline": Object {
                "avg_bucket": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/avg-bucket/",
                "base": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/index/",
                "bucket_script": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/bucket-script/",
                "bucket_sort": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/bucket-sort/",
                "cumulative_sum": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/cumulative-sum/",
                "derivative": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/derivative/",
                "moving_avg": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/moving-avg/",
                "serial_diff": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/serial-diff/",
                "stats_bucket": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/stats-bucket/",
                "syntax": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/index/#buckets-path",
                "types": "https://opensearch.org/docs/mocked-test-branch/aggregations/pipeline/index/#pipeline-aggregation-types",
              },
            },
            "cluster": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/",
              "build_cluster": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#step-3-bind-a-cluster-to-specific-ip-addresses",
              "config_host": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#step-4-configure-discovery-hosts-and-initial-cluster-manager-nodes-for-a-cluster",
              "config_shard": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#advanced-step-6-configure-shard-allocation-awareness-or-forced-awareness",
              "naming": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#step-1-name-a-cluster",
              "set_attribute": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#step-2-set-node-attributes-for-each-node-in-a-cluster",
              "setup_hot_arch": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#advanced-step-7-set-up-a-hot-warm-architecture",
              "start": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/#step-5-start-the-cluster",
            },
            "commonParameters": "https://opensearch.org/docs/mocked-test-branch/api-reference/common-parameters/",
            "configuration": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/configuring-opensearch/index/",
            "dataStreams": "https://opensearch.org/docs/mocked-test-branch/im-plugin/data-streams/",
            "dateMath": "https://opensearch.org/docs/mocked-test-branch/mappings/supported-field-types/date/#date-math",
            "indexAlias": Object {
              "add_remove_index": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-alias/#switching-an-alias-to-a-different-index",
              "alias_option": "https://opensearch.org/docs/mocked-test-branch/api-reference/alias/aliases-api/#request-body-fields",
              "base": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-alias/",
              "create_alias": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-alias/#creating-an-alias",
              "filtered_alias": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-alias/#filtering-an-alias",
              "manage_alias": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-alias/#inspecting-and-querying-aliases",
            },
            "indexData": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/im-plugin/",
              "delete_data": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/delete-document/",
              "naming": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/create-index/#index-naming-restrictions",
              "read_data": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/get-documents/",
              "update_data": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/update-document/",
            },
            "indexTemplates": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-templates/",
              "composable": "https://opensearch.org/docs/mocked-test-branch/im-plugin/index-templates/#creating-an-index-template",
              "options": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/create-index-template/#request-body-fields",
            },
            "installation": Object {
              "ansible": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/ansible/",
              "base": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/index/",
              "compatibility": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/index/",
              "docker": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/docker/",
              "dockerSecurity": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/docker/",
              "helm": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/helm/",
              "plugins": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/plugins/",
              "settings": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/index/",
              "tar": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-opensearch/tar/",
            },
            "introduction": "https://opensearch.org/docs/mocked-test-branch/about/",
            "logs": Object {
              "application_log": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/configuring-opensearch/logs/#application-logs",
              "base": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/configuring-opensearch/logs/",
              "deprecation_log": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/configuring-opensearch/logs/#deprecation-logs",
              "slow_log": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/configuring-opensearch/logs/#search-request-slow-logs",
            },
            "openSearchForum": "https://forum.opensearch.org/t/feedback-experimental-feature-connect-to-external-data-sources/11144",
            "popularAPI": "https://opensearch.org/docs/mocked-test-branch/api-reference/popular-api/",
            "queryDSL": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/query-dsl/",
              "boolQuery": "https://opensearch.org/docs/mocked-test-branch/query-dsl/compound/bool/",
              "fullText": Object {
                "base": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/index/",
                "common_terms": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/index/",
                "match": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/match/",
                "match_phrase": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/match-phrase/",
                "multi_match": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/multi-match/",
                "options": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/index/",
                "query_string": "https://opensearch.org/docs/mocked-test-branch/query-dsl/full-text/query-string/",
              },
              "term": Object {
                "base": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/index/",
                "exists": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/exists/",
                "ids": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/ids/",
                "prefix": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/prefix/",
                "range": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/range/",
                "regex": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/regexp/",
                "terms": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/terms/",
                "wildcards": "https://opensearch.org/docs/mocked-test-branch/query-dsl/term/wildcard/",
              },
            },
            "reindexData": Object {
              "all": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#example-request",
              "base": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/",
              "combine": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#consolidating-time-based-indexes",
              "destination": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#the-dest-object",
              "remote": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#cross-cluster-reindexing",
              "source": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#the-source-object",
              "subset": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#filtering-documents-by-query",
              "transform": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#transforming-documents-using-ingest-pipelines",
              "unique": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/reindex/#the-dest-object",
              "update": "https://opensearch.org/docs/mocked-test-branch/api-reference/document-apis/update-by-query/",
            },
            "restAPI": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/api-reference/",
              "indexAPI": Object {
                "base": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/index/",
                "close": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/close-index/",
                "create": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/create-index/",
                "delete": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/delete-index/",
                "exists": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/exists/",
                "get": "https://opensearch.org/docs/mocked-test-branch/api-reference/index-apis/get-index/",
              },
            },
            "searchExperience": Object {
              "autocomplete": "https://opensearch.org/docs/mocked-test-branch/search-plugins/searching-data/autocomplete/",
              "base": "https://opensearch.org/docs/mocked-test-branch/search-plugins/searching-data/index/",
              "highlight_match": "https://opensearch.org/docs/mocked-test-branch/search-plugins/searching-data/highlight/",
              "paginate": "https://opensearch.org/docs/mocked-test-branch/search-plugins/searching-data/paginate/",
              "scroll": "https://opensearch.org/docs/mocked-test-branch/search-plugins/searching-data/paginate/#scroll-search",
              "sort": "https://opensearch.org/docs/mocked-test-branch/search-plugins/searching-data/sort/",
            },
            "searchTemplate": Object {
              "advanced_operation": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-template/index/#advanced-parameter-conversion-with-search-templates",
              "base": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-template/index/",
              "create": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-template/index/#create-search-templates",
              "execute": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-template/index/#save-and-execute-search-templates",
              "manage": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-template/index/#manage-search-templates",
              "multiple_search": "https://opensearch.org/docs/mocked-test-branch/api-reference/search-apis/search-template/index/#multiple-search-templates",
            },
            "snapshotRestore": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/availability-and-recovery/snapshots/snapshot-restore/",
              "register": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/availability-and-recovery/snapshots/snapshot-restore/#register-repository",
              "restore_snapshot": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/availability-and-recovery/snapshots/snapshot-restore/#restore-snapshots",
              "security_plugin": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/availability-and-recovery/snapshots/snapshot-restore/#security-considerations",
              "take_snapshot": "https://opensearch.org/docs/mocked-test-branch/tuning-your-cluster/availability-and-recovery/snapshots/snapshot-restore/#take-snapshots",
            },
            "supportedUnits": "https://opensearch.org/docs/mocked-test-branch/api-reference/units/",
          },
          "opensearchDashboards": Object {
            "browser": "https://opensearch.org/docs/mocked-test-branch/dashboards/getting-started/index/",
            "dashboards": Object {
              "createDashboards": "https://opensearch.org/docs/mocked-test-branch/dashboards/dashboard/index/",
              "quickStart": "https://opensearch.org/docs/mocked-test-branch/dashboards/getting-started/index/",
            },
            "dataSource": Object {
              "guide": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/multi-data-sources/",
              "s3DataSource": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/S3-data-source/",
            },
            "devTools": "https://opensearch.org/docs/mocked-test-branch/dashboards/dev-tools/index/",
            "dql": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/dashboards/dql",
              "boolean_query": "https://opensearch.org/docs/mocked-test-branch/dashboards/dql/#boolean-operators",
              "date_query": "https://opensearch.org/docs/mocked-test-branch/dashboards/dql/#ranges",
              "nested_query": "https://opensearch.org/docs/mocked-test-branch/dashboards/dql/#nested-fields",
              "terms_query": "https://opensearch.org/docs/mocked-test-branch/dashboards/dql/#search-for-terms",
            },
            "ganttCharts": "https://opensearch.org/docs/mocked-test-branch/dashboards/gantt",
            "installation": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/index/",
              "docker": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/docker/",
              "helm": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/helm/",
              "plugins": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/plugins/",
              "tar": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/tar/",
              "tls": "https://opensearch.org/docs/mocked-test-branch/install-and-configure/install-dashboards/tls/",
            },
            "introduction": "https://opensearch.org/docs/mocked-test-branch/dashboards/",
            "management": Object {
              "advancedSettings": "https://opensearch.org/docs/mocked-test-branch/dashboards/management/advanced-settings/",
            },
            "mapTiles": "https://opensearch.org/docs/mocked-test-branch/dashboards/visualize/visualize-app/maptiles/",
            "notebooks": Object {
              "base": "https://opensearch.org/docs/mocked-test-branch/observing-your-data/notebooks/",
              "create_report": "https://opensearch.org/docs/mocked-test-branch/observing-your-data/notebooks/#create-a-report",
              "notebook_tutorial": "https://opensearch.org/docs/mocked-test-branch/observing-your-data/notebooks/#get-started-with-notebooks",
              "paragraph_tutorial": "https://opensearch.org/docs/mocked-test-branch/observing-your-data/notebooks/#paragraph-actions",
              "sample_notebook": "https://opensearch.org/docs/mocked-test-branch/observing-your-data/notebooks/#sample-notebooks",
            },
            "reporting": "https://opensearch.org/docs/mocked-test-branch/reporting/report-dashboard-index/",
            "visualize": Object {
              "guide": "https://opensearch.org/docs/mocked-test-branch/dashboards/visualize/visualize-app/index/",
            },
            "workspace": Object {
              "collaborators": "https://opensearch.org/docs/mocked-test-branch/dashboards/workspace/workspace-acl/#defining-workspace-collaborators",
              "privacy": "https://opensearch.org/docs/mocked-test-branch/dashboards/workspace/workspace-acl/#configuring-workspace-privacy",
            },
          },
        },
      },
      "http": Object {
        "addLoadingCountSource": [MockFunction],
        "anonymousPaths": Object {
          "isAnonymous": [MockFunction],
          "register": [MockFunction],
        },
        "basePath": BasePath {
          "basePath": "",
          "clientBasePath": "",
          "get": [Function],
          "getBasePath": [Function],
          "prepend": [Function],
          "remove": [Function],
          "serverBasePath": "",
        },
        "delete": [MockFunction],
        "fetch": [MockFunction],
        "get": [MockFunction],
        "getLoadingCount$": [MockFunction],
        "head": [MockFunction],
        "intercept": [MockFunction],
        "options": [MockFunction],
        "patch": [MockFunction],
        "post": [MockFunction],
        "put": [MockFunction],
      },
      "uiSettings": Object {
        "get": [MockFunction],
        "get$": [MockFunction],
        "getAll": [MockFunction],
        "getAllUserProvidedWithScope": [MockFunction],
        "getDefault": [MockFunction],
        "getSaved$": [MockFunction],
        "getUpdate$": [MockFunction],
        "getUpdateErrors$": [MockFunction],
        "getUserProvidedWithScope": [MockFunction],
        "isCustom": [MockFunction],
        "isDeclared": [MockFunction],
        "isDefault": [MockFunction],
        "isOverridden": [MockFunction],
        "overrideLocalDefault": [MockFunction],
        "remove": [MockFunction],
        "set": [MockFunction],
      },
    }
  }
>
  <QueryLanguageSelector
    onSelectLanguage={[MockFunction]}
  >
    <EuiPopover
      anchorPosition="downLeft"
      button={
        <EuiSmallButtonEmpty
          className="languageSelector__button"
          data-test-subj="queryEditorLanguageSelector"
          iconSide="right"
          iconType="arrowDown"
          onClick={[Function]}
        >
          Lucene
        </EuiSmallButtonEmpty>
      }
      className="languageSelector"
      closePopover={[Function]}
      display="inlineBlock"
      hasArrow={true}
      isOpen={false}
      ownFocus={true}
      panelPaddingSize="none"
    >
      <div
        className="euiPopover euiPopover--anchorDownLeft languageSelector"
      >
        <div
          className="euiPopover__anchor"
        >
          <EuiSmallButtonEmpty
            className="languageSelector__button"
            data-test-subj="queryEditorLanguageSelector"
            iconSide="right"
            iconType="arrowDown"
            onClick={[Function]}
          >
            <EuiButtonEmpty
              className="languageSelector__button"
              data-test-subj="queryEditorLanguageSelector"
              iconSide="right"
              iconType="arrowDown"
              onClick={[Function]}
              size="s"
            >
              <button
                className="euiButtonEmpty euiButtonEmpty--primary euiButtonEmpty--small languageSelector__button"
                data-test-subj="queryEditorLanguageSelector"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                <EuiButtonContent
                  className="euiButtonEmpty__content"
                  iconGap="m"
                  iconSide="right"
                  iconSize="m"
                  iconType="arrowDown"
                  textProps={
                    Object {
                      "className": "euiButtonEmpty__text",
                    }
                  }
                >
                  <span
                    className="euiButtonContent euiButtonContent--iconRight euiButtonEmpty__content"
                  >
                    <EuiIcon
                      className="euiButtonContent__icon"
                      color="inherit"
                      size="m"
                      type="arrowDown"
                    >
                      <span
                        className="euiButtonContent__icon"
                        color="inherit"
                        data-euiicon-type="arrowDown"
                        size="m"
                      />
                    </EuiIcon>
                    <span
                      className="euiButtonEmpty__text"
                    >
                      Lucene
                    </span>
                  </span>
                </EuiButtonContent>
              </button>
            </EuiButtonEmpty>
          </EuiSmallButtonEmpty>
        </div>
      </div>
    </EuiPopover>
  </QueryLanguageSelector>
</Provider>
`;
